--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.7.4</version>
 			</plugin>
 			<plugin>
 				<groupId>com.spotify</groupId>
